--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gulp-browserify": "^0.5.1",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
-    "gulp-jslint-simple": "^1.0.2",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "jshint": "^2.9.5"
   }
 }
